# ComfyUI_TensorRT

./: __init__.py  conditioning_dummy.py  converter_clip.py  converter_unet.py  converter_vae.py  loader_clip.py  loader_unet.py  loader_vae.py  pyproject.toml  requirements.txt  tensorrt_clip_loader.py  tensorrt_convert.py  tensorrt_convert_clip.py  tensorrt_convert_vae.py  tensorrt_loader.py  tensorrt_model.py  tensorrt_vae_loader.py
models/: trtModel.py  unet.py
utils/: folder_setup.py  tensorrt_error_recorder.py  timing_cache.py  tqdm_progress_monitor.py  trt_datatype_to_torch.py
wrappers_for_model_patcher/: wrapper_clip_model_patcher.py  wrapper_unet_model_patcher.py
wrappers_for_onnx_convert/: wrapper_clip_convert.py  wrapper_unet_convert.py  wrapper_vae_convert.py
wrappers_for_tensorrt_load/: wrapper_clip_load.py  wrapper_unet_load.py  wrapper_vae_load.py
